# accompanist

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  nginx.conf  pyproject.toml
accompanist/: config.py  dao.py  database.py  main.py
accompanist/celery/: album.py  main.py  tasks.py
accompanist/collection/: dao.py  models.py  router.py  schema.py  service.py  service_genius.py
accompanist/songs/: models.py
alembic/: env.py
alembic/versions/: 0017d75656ce_.py  12a1d416b35e_.py  42060442a9f0_.py  4a14745ef9f8_.py  4a303689767f_.py  52236ce91805_.py  a7f61a8fe7e5_.py  b20480ab6439_create_album_and_artist.py  b3d2a87ec36d_.py  b46fbe9d06e4_.py  d6639af18a56_.py  f624d0186ad2_create_song_add_relationships.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/components/: AddAlbumComponent.vue  AlbumComponent.vue  AlbumListComponent.vue  AudioComponent.vue  HeaderComponent.vue  KaraokeLyricsComponent.vue  RecordTimecodesComponent.vue  SettingsModalComponent.vue  SpinnerComponent.vue  TrackComponent.vue
nginx/: Dockerfile  nginx.conf
