[tool.poetry]
name = "accompanist"
version = "0.1.0"
description = "A self-hosted karaoke system with AI"
authors = ["m-danya <danila-mikh@ya.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.0"}
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
celery = "^5.3.6"
gunicorn = "^21.2.0"
ytmusicapi = "*" # updates are very important for this package
yt-dlp = "*" # updates are very important for this package
demucs = "^4.0.1"
lyricsgenius = "^3.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = ["I"]
